[gd_scene load_steps=3 format=2]

[ext_resource path="res://Action RPG Resources/World/SpawnerArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 176, 65 )

[node name="SpawnerArea" type="Area2D"]
collision_layer = 0
collision_mask = 128
script = ExtResource( 1 )

[node name="SpawnerAreaCol" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.3, 0.4 )

[connection signal="area_entered" from="." to="." method="_on_SpawnerArea_area_entered"]
